# fisherman

./: .gitignore  Cargo.toml  README.md  sample_payload.json
.github/: dependabot.yml
src/: auth.rs  config.rs  error.rs  events.rs  git.rs  logging.rs  main.rs  webhook.rs
templates/: status.html.tera
