[package]
name = "fisherman"
version = "0.1.0"
authors = ["Alexander Jackson <alexanderjackson@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.3"
actix-rt = "2.1.0"
log = "0.4.14"
chrono = "0.4.19"
git2 = "0.13.17"
serde_yaml = "0.8.17"
serde_json = "1.0.64"
tokio-stream = "0.1.3"
hmac = "0.10.1"
sha2 = "0.9.3"
hex = "0.4.2"
tera = "1.7.0"

[dependencies.tokio]
version = "1.2.0"
features = ["macros", "rt-multi-thread"]

[dependencies.serde]
version = "1.0.123"
features = ["derive"]

[dependencies.fern]
version = "0.6.0"
features = ["colored"]
